# SLAM-study

./: .gitignore
3D_Rigid_Body_Motion/EigenGeometry/: CMakeLists.txt
3D_Rigid_Body_Motion/EigenGeometry/src/: useGeometry.cpp
3D_Rigid_Body_Motion/Visualize3DMotion/: CMakeLists.txt
3D_Rigid_Body_Motion/VisualizeTrajectory/: CMakeLists.txt
3D_Rigid_Body_Motion/VisualizeTrajectory/src/: plotTrajectory.cpp
BundleAdjustment/: CMakeLists.txt  final.ply
BundleAdjustment/Modules/BundleAdjustment/: CMakeLists.txt
BundleAdjustment/Modules/BundleAdjustment/include/: BAL_handler.hpp  SnavelyReprojection.hpp  bundle_adjustment.hpp  random.hpp  rotation.hpp
BundleAdjustment/Modules/BundleAdjustment/src/: BAL_handler.cpp  SnavelyReprojection.cpp  bundle_adjustment.cpp
BundleAdjustment/Modules/cmake/: FindBLAS.cmake  FindLAPACK.cmake
BundleAdjustment/example/: main.cpp
Dense_Reconstruction/DenseMonocular/: CMakeLists.txt
Dense_Reconstruction/DenseMonocular/Module/DenseMono/: CMakeLists.txt
Dense_Reconstruction/DenseMonocular/Module/DenseMono/include/: dense_mapping.hpp  utils.hpp
Dense_Reconstruction/DenseMonocular/Module/DenseMono/src/: dense_mapping.cpp  utils.cpp
Dense_Reconstruction/DenseMonocular/example/: main.cpp  solution.cpp
Direct_Method/DirectMethod/: CMakeLists.txt
Direct_Method/DirectMethod/Modules/DirectMethod/: CMakeLists.txt
Direct_Method/DirectMethod/Modules/DirectMethod/include/: direct_method.hpp
Direct_Method/DirectMethod/Modules/DirectMethod/src/: direct_method.cpp
Direct_Method/DirectMethod/example/: main.cpp  solution.cpp
Direct_Method/LK_flow/: CMakeLists.txt
Direct_Method/LK_flow/src/: optical_flow.cpp  solution.cpp
Epipolar_Geometry/PoseEstimation/: CMakeLists.txt
Epipolar_Geometry/PoseEstimation/example/: main.cpp
Epipolar_Geometry/PoseEstimation/modules/PoseEstimation/: CMakeLists.txt
Epipolar_Geometry/PoseEstimation/modules/PoseEstimation/include/: pose_estimation.hpp  triangulation.hpp  utils.hpp
Epipolar_Geometry/PoseEstimation/modules/PoseEstimation/src/: pose_estimation.cpp  triangulation.cpp  utils.cpp
Feature_Method/ORB_Feature/: CMakeLists.txt
Feature_Method/ORB_Feature/src/: fast_corner.cpp
Image_Basics/RGBD/: CMakeLists.txt
Image_Basics/RGBD/src/: jointMap.cpp
Image_Basics/Stereo_Vision/: CMakeLists.txt
Image_Basics/Stereo_Vision/src/: stereoVision.cpp
Image_Basics/Undistort_Image/: CMakeLists.txt
Image_Basics/Undistort_Image/src/: undistortImage.cpp
KITTI_Stereo_VO/: CMakeLists.txt
KITTI_Stereo_VO/Modules/vslam/: CMakeLists.txt
KITTI_Stereo_VO/Modules/vslam/include/: algorithm.hpp  backend.hpp  camera.hpp  common_include.hpp  config.hpp  dataset.hpp  feature.hpp  frame.hpp  frontend.hpp  g2o_types.hpp  map.hpp  mappoint.hpp  viewer.hpp  visual_odometry.hpp
KITTI_Stereo_VO/Modules/vslam/src/: backend.cpp  config.cpp  dataset.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
KITTI_Stereo_VO/config/: default.yaml
KITTI_Stereo_VO/example/: main.cpp
Lie_Group_Lie_Algebra/SophusTutorial/: CMakeLists.txt
Lie_Group_Lie_Algebra/SophusTutorial/src/: useSophus.cpp
Lie_Group_Lie_Algebra/TrajectoryEvaluation/: CMakeLists.txt
Lie_Group_Lie_Algebra/TrajectoryEvaluation/src/: trajectoryError.cpp
LoopDetection/: CMakeLists.txt  feature_training.cpp  loop_closure.cpp
Non_Linear_Optimization/Curve_Fitting/: CMakeLists.txt
Non_Linear_Optimization/Curve_Fitting/src/: ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
PoseGraph/: CMakeLists.txt
PoseGraph/Modules/PoseGraph/: CMakeLists.txt
PoseGraph/Modules/PoseGraph/include/: pose_graph_g2o_lie.hpp
PoseGraph/Modules/PoseGraph/src/: pose_graph_g2o_lie.cpp
PoseGraph/example/: main.cpp
